refactor!: Rename project from frappe_gen to frappe_tsx
- Updated all references from frappe_gen to frappe_tsx
- Updated package.json, pyproject.toml, and other configuration files
- Refreshed README with more detailed project description
- Updated GitHub workflows and configuration files
- Adjusted contact email and homepage details

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,4 +1,4 @@
-# Any python files modifed but no test files modified
+# Any python files modified but no test files modified
 add-test-cases:
-- any: ['frappe_gen/**/*.py']
-  all: ['!frappe_gen/**/test*.py']
+  - any: ["frappe_tsx/**/*.py"]
+    all: ["!frappe_tsx/**/test*.py"]
