--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -8,12 +8,12 @@ permissions:
   contents: read
 
 concurrency:
-  group: precommit-frappe_gen-${{ github.event_name }}-${{ github.event.number }}
+  group: precommit-frappe_tsx-${{ github.event_name }}-${{ github.event.number }}
   cancel-in-progress: true
 
 jobs:
   linter:
-    name: 'precommit'
+    name: "precommit"
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
 
@@ -21,6 +21,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
           cache: pip
       - uses: pre-commit/action@v3.0.1
