--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write # to be able to publish a GitHub release
-      issues: write # to be able to comment on released issues
-      pull-requests: write # to be able to comment on released pull requests
+      contents: write
+      issues: write
+      pull-requests: write
 
     steps:
       - name: Checkout Entire Repository
@@ -38,5 +38,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GIT_COMMITTER_NAME: "Frappe Gen PR Bot"
+          GIT_AUTHOR_NAME: "DAS DevOps"
+          GIT_AUTHOR_EMAIL: "devops@dhiashalabi.dev"
+          GIT_COMMITTER_NAME: "DAS DevOps"
+          GIT_COMMITTER_EMAIL: "devops@dhiashalabi.dev"
         run: npx semantic-release
