--- a/.releaserc
+++ b/.releaserc
@@ -1,31 +1,35 @@
 {
     "branches": [
         {
-            "name": "master",
+            "name": "version-15",
             "channel": "stable"
         }
     ],
     "plugins": [
         "@semantic-release/commit-analyzer",
-        {
-            "preset": "angular"
-        },
         "@semantic-release/release-notes-generator",
+        [
+            "@semantic-release/changelog",
+            {
+                "changelogFile": "CHANGELOG.md"
+            }
+        ],
+        "@semantic-release/github",
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": 'sed -ir "s/[0-9]*\.[0-9]*\.[0-9]*/${nextRelease.version}/" frappe_gen/__init__.py'
+                "prepareCmd": 'sed -ir "s/[0-9]*\.[0-9]*\.[0-9]*/${nextRelease.version}/" frappe_tsx/__init__.py'
             }
         ],
         [
             "@semantic-release/git",
             {
                 "assets": [
-                    "frappe_gen/__init__.py"
+                    "frappe_tsx/__init__.py",
+                    "CHANGELOG.md"
                 ],
                 "message": "chore(release): Bumped to Version ${nextRelease.version}"
             }
-        ],
-        "@semantic-release/github"
+        ]
     ]
 }
