--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "frappe_gen",
+  "name": "frappe_tsx",
   "description": "Typescript type definition generator for Frappe DocTypes",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dhiashalabi/frappe_gen.git"
+    "url": "git+https://github.com/dhiashalabi/frappe_tsx.git"
   },
-  "author": "DHIa A. SHalabi",
+  "author": "DHia A. SHalabi",
   "license": "MIT",
-  "homepage": "https://dhiashalabi.info",
+  "homepage": "https://dhiashalabi.com",
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@commitlint/cz-commitlint": "^19.5.0",
-    "@eslint/js": "^8.57.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@commitlint/cz-commitlint": "^19.8.0",
+    "@eslint/js": "^9.21.0",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.0",
-    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/exec": "^7.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.0",
-    "@semantic-release/release-notes-generator": "^14.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "prettier": "^3.3.3",
-    "semantic-release": "^24.1.3"
+    "prettier": "^3.5.3",
+    "semantic-release": "^24.2.3"
   }
 }
