chore: Update project configuration and repository details
- Change release branch from 'version-15' to 'master'
- Rename package name from 'frappe_tsx' to 'frappe-tsx'
- Update repository URL to match package name

--- a/.releaserc
+++ b/.releaserc
@@ -1,7 +1,7 @@
 {
     "branches": [
         {
-            "name": "version-15",
+            "name": "master",
             "channel": "stable"
         }
     ],
